--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "tsx ./src/server.ts",
     "dev:watch": "tsx watch ./src/server.ts"
   },
+  "run": {
+    "web": "npm run build && node ./build/server.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
